[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit-agraph>=0.0.45",
    "streamlit>=1.44.1",
    "openai>=1.70.0",
    "google-generativeai>=0.8.4",
    "requests>=2.32.3",
    "anthropic>=0.49.0",
]
